Step 6-8 sum up View-Controller-i18n

--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -9,3 +9,5 @@ appTitle=Walkthrough
 appDescription=Walkthrough Tutorial
 #XTIT: Main view title
 title=Walkthrough
+showHelloButtonText=Say Hello
+helloMsg=Hello {0}
